public/css/sidebar.css
#sidebar {
  position:fixed;
  bottom:0;
  right:0;
  /* Firefox */
  height: -moz-calc(100% - 32px);
  /* WebKit */
  height: -webkit-calc(100% - 32px);
  /* Opera */
  height: -o-calc(100% - 32px);
  /* Standard */
  height: calc(100% - 32px);
  width:20%;
  max-width:250px;
  z-index:100px;

  overflow:visible;

  border-left: 5px solid #919191;
  background-color:#DEDEDE;
  display:inline-block;

}

.sidebar-button {
  position:fixed;
  right:0;
  bottom:0;
  height:25px;
  width:50px;
}

.sidebar-list {
  list-style: none outside none;
  margin: 10px 0 30px;
  padding: 3px;
}

.search-results-container {
  background:#DDDDDD;
}

.query {
  margin-bottom:5px;
}

